--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         /* 浅色模式 */
         body.light-mode {
-            --bg-gradient-start: #e8e8f0;
-            --bg-gradient-mid: #d0d4e8;
-            --bg-gradient-end: #c5d0e8;
+            --bg-gradient-start: #e8f0f8;
+            --bg-gradient-mid: #d8e8f5;
+            --bg-gradient-end: #c8e0f2;
             --container-bg: #ffffff;
             --text-primary: #1a1a2e;
             --text-secondary: #495057;
@@ -78,10 +78,36 @@
             align-items: center;
             padding: 20px;
             transition: background 0.3s ease;
+            position: relative;
         }
+
+        /* Wave 水印背景 - 45° 旋转交错排列 */
+        body::before,
+        body::after {
+            content: '';
+            position: fixed;
+            width: 400%;
+            height: 400%;
+            background-image: url('wave.svg');
+            background-size: 2000px 1000px;
+            background-repeat: repeat;
+            opacity: 0.25;
+            pointer-events: none;
+            z-index: -1;
+            transform: rotate(45deg);
+            background-color: #1877F2;
+            background-blend-mode: screen;
+        }
+
+        body::before {
+            top: -150%;
+            left: -150%;
+        }
+
 
         .container {
             position: relative;
+            z-index: 1;
             background: var(--container-bg);
             border-radius: 20px;
             padding: 40px;
@@ -179,8 +205,15 @@
         }
 
         .upload-icon {
-            font-size: 48px;
-            margin-bottom: 15px;
+            width: 64px;
+            height: 64px;
+            margin: 0 auto 15px;
+        }
+        
+        .upload-icon svg {
+            width: 100%;
+            height: 100%;
+            display: block;
         }
 
         .upload-text {
@@ -1178,7 +1211,7 @@
         
         <div class="upload-area" id="uploadArea">
             <input type="file" id="audioInput" accept="audio/*">
-            <div class="upload-icon">📁</div>
+            <div class="upload-icon"><svg viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"><path d="M918.673 883H104.327C82.578 883 65 867.368 65 848.027V276.973C65 257.632 82.578 242 104.327 242h814.346C940.422 242 958 257.632 958 276.973v571.054C958 867.28 940.323 883 918.673 883z" fill="#FFE9B4"></path><path d="M512 411H65V210.37C65 188.597 82.598 171 104.371 171h305.92c17.4 0 32.71 11.334 37.681 28.036L512 411z" fill="#FFB02C"></path><path d="M918.673 883H104.327C82.578 883 65 865.42 65 843.668V335.332C65 313.58 82.578 296 104.327 296h814.346C940.422 296 958 313.58 958 335.332v508.336C958 865.32 940.323 883 918.673 883z" fill="#FFCA28"></path></svg></div>
             <div class="upload-text">点击或拖拽打开本地音乐文件</div>
         </div>
 
