修复：添加缺失的宽屏模式切换按钮 HTML

--- a/index.html
+++ b/index.html
@@ -1295,6 +1295,12 @@
     
     <!-- 主题切换按钮 -->
     <div class="container">
+        <button class="wide-mode-toggle" id="wideModeToggle" title="切换宽屏模式">
+            <svg viewBox="0 0 24 24" id="wideModeIcon">
+                <path d="M4 6h16v12H4z" fill="none" stroke="currentColor" stroke-width="2"/>
+                <path d="M6 8h12v8H6z" fill="currentColor"/>
+            </svg>
+        </button>
         <button class="theme-toggle" id="themeToggle" title="切换主题">
             <svg viewBox="0 0 24 24" id="themeIcon">
                 <!-- 自适应图标：半圆半圆点 -->
