fix: align toolbar divider vertically

--- a/index.html
+++ b/index.html
@@ -390,6 +390,8 @@
             background: var(--border-color);
             opacity: 0.3;
             margin: 0 4px;
+            align-self: center;
+            flex-shrink: 0;
         }
         
         .toolbar-prefix-input {
@@ -1641,7 +1643,7 @@
         <div class="help-content">
             <div class="help-header">
                 <h3>使用说明</h3>
-                <span class="help-version">0.0.1</span>
+                <span class="help-version">v0.0.3</span>
                 <button class="help-close" id="helpClose">&times;</button>
             </div>
             <div class="help-body">
